# refactoring-to-rust

./: Cargo.toml  README.md
chapter-07/listing_04_add_fn/src/: lib.rs
chapter-07/listing_05_add_fn_doc/src/: lib.rs
chapter-07/listing_06_add_fn_doctest/src/: lib.rs
chapter-07/listing_07_add_fn_passing_doctest/src/: lib.rs
chapter-08/: main-async.py  main-single.py  main-sleep.py  requirements.txt
chapter-09/papers/: Cargo.toml
chapter-09/papers/papers-list/: package-lock.json  package.json
chapter-09/papers/src/: lib.rs
chapter-10/arxiv-local-proxy/: package.json  server.js
chapter-10/journal/: Cargo.toml
chapter-10/journal/book_search/: Cargo.toml
chapter-10/journal/book_search/src/: main.rs
chapter-10/journal/paper_search/src/: main.rs
chapter-10/journal/paper_search_lib/: Cargo.toml
chapter-10/journal/paper_search_lib/src/: lib.rs
script/: gen-workspace
